--- a/package.json
+++ b/package.json
@@ -2,21 +2,25 @@
   "name": "secret-santa",
   "version": "1.0.0",
   "description": "my version of secret santa with a graph based approach",
-  "main": "index.js",
+  "main": "",
   "scripts": {
-    
-    "dev": "concurrently 'ts-node ./src/app.ts' 'npm --prefix /client run dev'"
+    "dev": "concurrently 'ts-node ./src/app.ts' 'npm --prefix ./client run dev'",
+    "dev:server": "ts-node ./src/app.ts",
+    "dev:client": "npm --prefix ./client run dev",
+    "server": "tsc && node dist/app.js"
   },
   "keywords": [],
   "author": "Miguel Tinembart",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "nodemon": "^2.0.22"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "concurrently": "^8.0.1",
-    "express": "^4.18.2",
+    "prettier": "^2.8.7",
     "ts-node": "^10.9.1"
   }
 }
