--- a/package.json
+++ b/package.json
@@ -15,11 +15,9 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "immer": "^10.0.1",
     "mongoose": "^7.0.4",
     "nodemon": "^2.0.22",
-    "path": "^0.12.7",
-    "zustand": "^4.3.7"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
