--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "theme-change": "^2.5.0",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
