--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:client": "npm --prefix ./client run build",
     "build:server": "tsc",
     "build": "tsc && npm --prefix ./client run build",
-    "preview": "node ./build/app"
+    "preview": "npm run build && node ./build/app"
   },
   "keywords": [],
   "author": "Miguel Tinembart",
@@ -27,6 +27,7 @@
     "@types/express": "^4.17.17",
     "@types/lodash": "^4.14.194",
     "concurrently": "^8.0.1",
+    "jest": "^29.5.0",
     "prettier": "^2.8.7",
     "ts-node": "^10.9.1"
   }
