--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "daisyui": "^2.51.6",
     "immer": "^10.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "theme-change": "^2.5.0",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
