--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -1,9 +1,9 @@
-name: Node.js CI
+name: Deploy to GH-Pages
 
 on:
-  push:
-     branches:
-       - "main"
+  pull_request:
+    branches:
+      - "main"
 
 
 jobs:
@@ -16,6 +16,15 @@ jobs:
         node-version: [18.x]
     
     steps:
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+      - run: npm --prefix ./client ci
+      - run: npm run build --if-present
+ 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
