--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -23,7 +23,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: npm --prefix ./client ci
-      - run: npm run build --if-present
+      - run: npm run build:client --if-present
  
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
