--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches:
       - "main"
-
+  
 
 jobs:
   build:
@@ -16,15 +16,18 @@ jobs:
         node-version: [18.x]
     
     steps:
+      - run: cd client
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm --prefix ./client ci
-      - run: npm run build:client --if-present
- 
+          
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: cd ..
+
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
