--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -16,17 +16,16 @@ jobs:
         node-version: [18.x]
     
     steps:
-      - run: cd client
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
+          cache-dependency-path: client/package-lock.json
           
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: cd ..
+      - run: npm --prefix ./client ci
+      - run: npm run build:client --if-present
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
