--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite --emptyOutDir build",
+    "build:action": "tsc && vite build --outDir ./dist",
     "preview": "vite preview"
   },
   "dependencies": {
