--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Miguel Tinembart",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mongoose": "^7.0.4",
